--- a/src/components/BlogSections/BlogSections.astro
+++ b/src/components/BlogSections/BlogSections.astro
@@ -8,15 +8,14 @@ export interface Props {
 
 const { posts } = Astro.props;
 ---
-
-<!-- Card Blog -->
-<div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
-  <!-- Grid -->
-  <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+<div class="md:w-[80vw] lg:w-[70vw]
+  px-4 md:px-0
+  py-10
+  mx-auto"
+>
+  <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
     {posts.map((post) => (
       <BlogSection post={post} />
     ))}
   </div>
-  <!-- End Grid -->
 </div>
-<!-- End Card Blog -->
