--- a/src/components/GoogleAnalytics.astro
+++ b/src/components/GoogleAnalytics.astro
@@ -3,7 +3,7 @@ export interface Props {
   trackingId: string
 }
 
-const { trackingId = '' } = Astro.props
+const { trackingId = '' } = Astro.props;
 ---
 
 {
