--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,8 +1,7 @@
 ---
-import Header1st from "./Header1st.astro";
-import Header2nd from "./Header2nd.astro";
+import Header1st from './Header1st.astro';
+import Header2nd from './Header2nd.astro';
 ---
-
 
 {<Header1st />}
 {<Header2nd />}
