--- a/src/components/SearchModal.astro
+++ b/src/components/SearchModal.astro
@@ -6,7 +6,7 @@
 
   <div class="search-modal">
     <div class="search-prompt">
-      <input type="text" placeholder="Search..." />
+      <input id="search-input" type="text" placeholder="Search..." />
     </div>
     <div class="search-result">
       <ul>
@@ -102,7 +102,7 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', async () => {
-    let feedItems = []
+    let feedItems: any[] = []
     let fetched = false
 
     async function openModal() {
@@ -119,7 +119,7 @@
       document.querySelector('.search-modal-container').style.display = 'none'
     }
 
-    function handleKeydown(event) {
+    function handleKeydown(event: any) {
       if (event.keyCode === 13) {
         // Enter
         select()
