--- a/src/components/icon/FaceBookIcon.astro
+++ b/src/components/icon/FaceBookIcon.astro
@@ -1,5 +1,5 @@
 ---
-const FaceBookLink = "";
+const FaceBookLink = '';
 ---
 <a class="group" href={FaceBookLink}>
   <button class="bg-blue-500 p-2 font-semibold text-white inline-flex items-center space-x-2 rounded group-hover:bg-blue-600">
