--- a/src/components/icon/GithubIcon.astro
+++ b/src/components/icon/GithubIcon.astro
@@ -1,5 +1,5 @@
 ---
-const GithubLink = "";
+const GithubLink = '';
 ---
 <a class="group" href={GithubLink}>
   <button class="bg-gray-600 p-2 font-semibold text-white inline-flex items-center space-x-2 rounded group-hover:bg-gray-900">
