--- a/src/components/icon/XIcon.astro
+++ b/src/components/icon/XIcon.astro
@@ -1,5 +1,5 @@
 ---
-const XLink = "";
+const XLink = '';
 ---
 <a class="group" href={XLink}>
   <button class="bg-black p-2 font-semibold text-white inline-flex items-center space-x-2 rounded group-hover:bg-gray-600">
