--- a/src/components/BlogSections/Date.astro
+++ b/src/components/BlogSections/Date.astro
@@ -1,5 +1,5 @@
 ---
-import { formatDate } from "../../lib/utils";
+import { formatDate } from '../../lib/utils';
 
 export interface Props {
   date: string;
