--- a/src/components/Cover/HomeCover.astro
+++ b/src/components/Cover/HomeCover.astro
@@ -1,5 +1,5 @@
 ---
-import SpeechBubble from "./SpeechBubble.astro"
+import SpeechBubble from './SpeechBubble.astro';
 ---
 <div
   class="bg-[url('/src/images/cover.jpg')] bg-no-repeat block w-full bg-fill h-[30vh] sm:h-[calc(180px+10vh)] bg-cover relative"
