--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,5 +1,5 @@
 ---
-import { getPageLink } from '../lib/blog-helpers.ts'
+import { getPageLink } from '../lib/blog-helpers.ts';
 
 export interface Props {
   currentPage: number
@@ -7,18 +7,17 @@ export interface Props {
   tag: string
 }
 
-const { currentPage, numberOfPages, tag = '' } = Astro.props
+const { currentPage, numberOfPages, tag = '' } = Astro.props;
 
-const isFirstPage = currentPage === 1
-const isLastPage = currentPage === numberOfPages
+const isFirstPage = currentPage === 1;
+const isLastPage = currentPage === numberOfPages;
 
-const startPage = currentPage - 2 < 1 ? 1 : currentPage - 2
-const endPage =
-  currentPage + 2 > numberOfPages ? numberOfPages : currentPage + 2
+const startPage = currentPage - 2 < 1 ? 1 : currentPage - 2;
+const endPage = currentPage + 2 > numberOfPages ? numberOfPages : currentPage + 2;
 
-let pages = []
+const pages = [];
 for (let i = startPage; i <= endPage; i++) {
-  pages.push(i)
+  pages.push(i);
 }
 ---
 
@@ -32,7 +31,7 @@ for (let i = startPage; i <= endPage; i++) {
     ))
   }
   <a href={getPageLink(numberOfPages, tag)} class={isLastPage && 'inactive'}
-    >&gt;&gt;</a
+  >&gt;&gt;</a
   >
 </div>
 
