--- a/src/components/PostDate.astro
+++ b/src/components/PostDate.astro
@@ -1,12 +1,12 @@
 ---
-import { type Post } from '../lib/interfaces.ts'
-import { getDateStr } from '../lib/blog-helpers.ts'
+import { type Post } from '../lib/interfaces.ts';
+import { getDateStr } from '../lib/blog-helpers.ts';
 
 export interface Props {
   post: Post
 }
 
-const { post } = Astro.props
+const { post } = Astro.props;
 ---
 
 <div class="post-date">
