--- a/src/components/PostExcerpt.astro
+++ b/src/components/PostExcerpt.astro
@@ -1,11 +1,11 @@
 ---
-import { Post } from '../lib/interfaces.ts'
+import { Post } from '../lib/interfaces.ts';
 
 export interface Props {
   post: Post
 }
 
-const { post } = Astro.props
+const { post } = Astro.props;
 ---
 
 <div class="post-excerpt">
