--- a/src/components/PostTags.astro
+++ b/src/components/PostTags.astro
@@ -1,29 +1,29 @@
 ---
-import type { Post, SelectProperty } from '../lib/interfaces.ts'
-import { getTagLink } from '../lib/blog-helpers.ts'
-import '../styles/notion-color.css'
+import type { Post, SelectProperty } from '../lib/interfaces.ts';
+import { getTagLink } from '../lib/blog-helpers.ts';
+import '../styles/notion-color.css';
 
 export interface Props {
   post: Post
   enableLink: boolean
 }
 
-const { post, enableLink = true } = Astro.props
+const { post, enableLink = true } = Astro.props;
 ---
 
 <div class="post-tags">
   {
-    post.Tags &&
-      post.Tags.length > 0 &&
-      post.Tags.map((tag: SelectProperty) => {
+    post.Tags
+      && post.Tags.length > 0
+      && post.Tags.map((tag: SelectProperty) => {
         if (enableLink) {
           return (
             <a href={getTagLink(tag.name)} class={`tag ${tag.color}`}>
               {tag.name}
             </a>
-          )
+          );
         }
-        return <span class={`tag ${tag.color}`}>{tag.name}</span>
+        return <span class={`tag ${tag.color}`}>{tag.name}</span>;
       })
   }
 </div>
