--- a/src/components/notion-blocks/CodePenEmbed.astro
+++ b/src/components/notion-blocks/CodePenEmbed.astro
@@ -2,9 +2,9 @@
 export interface Props {
   url: string
 }
-const { url } = Astro.props
-const user = url.pathname.split('/')[1]
-const id = url.pathname.split('/')[3]
+const { url } = Astro.props;
+const user = url.pathname.split('/')[1];
+const id = url.pathname.split('/')[3];
 ---
 
 <p
