--- a/src/components/notion-blocks/PinterestEmbed.astro
+++ b/src/components/notion-blocks/PinterestEmbed.astro
@@ -2,7 +2,7 @@
 export interface Props {
   url: URL
 }
-const { url } = Astro.props
+const { url } = Astro.props;
 ---
 
 <a href={url.toString()} data-pin-do="embedPin"></a>
