--- a/src/components/notion-blocks/TikTokEmbed.astro
+++ b/src/components/notion-blocks/TikTokEmbed.astro
@@ -2,9 +2,9 @@
 export interface Props {
   url: URL
 }
-const { url } = Astro.props
-const user = url.pathname.split('/')[1]
-const videoId = url.pathname.split('/')[3]
+const { url } = Astro.props;
+const user = url.pathname.split('/')[1];
+const videoId = url.pathname.split('/')[3];
 ---
 
 <div class="tiktok-wrapper">
