--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import * as interfaces from '../../lib/interfaces.ts'
+import * as interfaces from '../../lib/interfaces';
 import {
   getPosts,
   getAllPosts,
@@ -10,89 +10,81 @@ import {
   getAllTags,
   getAllBlocksByBlockId,
   downloadFile,
-} from '../../lib/notion/client.ts'
+} from '../../lib/notion/client';
 import {
   getPostLink,
   filePath,
   extractTargetBlocks,
-} from '../../lib/blog-helpers.ts'
-import Layout from '../../layouts/Layout.astro'
-import PostDate from '../../components/PostDate.astro'
-import PostTags from '../../components/PostTags.astro'
-import PostTitle from '../../components/PostTitle.astro'
-import PostBody from '../../components/PostBody.astro'
-import PostRelativeLink from '../../components/PostRelativeLink.astro'
-import BlogPostsLink from '../../components/BlogPostsLink.astro'
-import BlogTagsLink from '../../components/BlogTagsLink.astro'
-import styles from '../../styles/blog.module.css'
+} from '../../lib/blog-helpers';
+import Layout from '../../layouts/Layout.astro';
+import PostDate from '../../components/PostDate.astro';
+import PostTags from '../../components/PostTags.astro';
+import PostTitle from '../../components/PostTitle.astro';
+import PostBody from '../../components/PostBody.astro';
+import SideTableOfContents from '../../components/Article/TableOfContents/SideTableOfContents.astro';
+import MainTableOfContents from '../../components/Article/TableOfContents/MainTableOfContents.astro';
+import BlogSections from '../../components/BlogSections/BlogSections.astro';
 
 export async function getStaticPaths() {
-  const posts = await getAllPosts()
-  return posts.map((post: interfaces.Post) => ({ params: { slug: post.Slug } }))
+  const posts = await getAllPosts();
+  return posts.map((post: interfaces.Post) => ({ params: { slug: post.Slug } }));
 }
 
-const { slug } = Astro.params
+const { slug } = Astro.params;
 
-const post = await getPostBySlug(slug)
+const post = await getPostBySlug(slug);
 if (!post) {
-  throw new Error('Post not found. slug: ${slug}')
+  throw new Error(`Post not found. slug: ${slug}`);
 }
 
-console.log({ post });
-
-const [blocks, allPosts, rankedPosts, recentPosts, tags, postsHavingSameTag] =
-  await Promise.all([
-    getAllBlocksByBlockId(post.PageId),
-    getAllPosts(),
-    getRankedPosts(),
-    getPosts(5),
-    getAllTags(),
-    getPostsByTag(post.Tags[0]?.name, 6),
-  ])
+const [blocks, allPosts, rankedPosts, recentPosts, tags, postsHavingSameTag] = await Promise.all([
+  getAllBlocksByBlockId(post.PageId),
+  getAllPosts(),
+  getRankedPosts(),
+  getPosts(5),
+  getAllTags(),
+  getPostsByTag(post.Tags[0]?.name, 6),
+]);
 
 const fileAtacchedBlocks = extractTargetBlocks('image', blocks)
   .concat(extractTargetBlocks('file', blocks))
   .filter((block) => {
     if (!block) {
-      return false
+      return false;
     }
-    const imageOrFile = block.Image || block.File
-    return imageOrFile && imageOrFile.File && imageOrFile.File.Url
-  })
+    const imageOrFile = block.Image || block.File;
+    return imageOrFile && imageOrFile.File && imageOrFile.File.Url;
+  });
 
 // Download files
 await Promise.all(
   fileAtacchedBlocks
     .map(async (block) => {
-      const expiryTime = (block.Image || block.File).File.ExpiryTime
+      const expiryTime = (block.Image || block.File).File.ExpiryTime;
       if (Date.parse(expiryTime) > Date.now()) {
-        return Promise.resolve(block)
+        return Promise.resolve(block);
       }
-      return getBlock(block.Id)
+      return getBlock(block.Id);
     })
-    .map((promise) =>
-      promise.then((block) => {
-        let url!: URL
-        try {
-          url = new URL((block.Image || block.File).File.Url)
-        } catch (err) {
-          console.log('Invalid file URL')
-          return Promise.reject()
-        }
-        return Promise.resolve(url)
-      })
-    )
-    .map((promise) => promise.then(downloadFile))
-)
+    .map((promise) => promise.then((block) => {
+      let url!: URL;
+      try {
+        url = new URL((block.Image || block.File).File.Url);
+      } catch (err) {
+        console.log('Invalid file URL');
+        return Promise.reject();
+      }
+      return Promise.resolve(url);
+    }))
+    .map((promise) => promise.then(downloadFile)),
+);
 
-const currentPostIndex = allPosts.findIndex((post) => post.Slug === slug)
-const prevPost = allPosts[currentPostIndex + 1]
-const nextPost = allPosts[currentPostIndex - 1]
-
-let ogImage = ''
+let ogImage = '';
 if (post.FeaturedImage && post.FeaturedImage.Url) {
-  ogImage = new URL(filePath(new URL(post.FeaturedImage.Url)), Astro.site)
+  ogImage = new URL(filePath(new URL(post.FeaturedImage.Url)), Astro.site);
 }
+
+const headings = blocks.filter((b: interfaces.Block) => ['heading_1', 'heading_2', 'heading_3'].includes(b.Type));
 ---
 
 <Layout
@@ -101,29 +93,108 @@ if (post.FeaturedImage && post.FeaturedImage.Url) {
   path={getPostLink(post.Slug)}
   ogImage={ogImage}
 >
-  <div slot="main" class={styles.main}>
-    <div class={styles.post}>
-      <PostDate post={post} />
-      <PostTags post={post} />
-      <PostTitle post={post} enableLink={false} />
-      <PostBody blocks={blocks} />
-      <PostTags post={post} />
+  <div slot="main">
+    <div
+      class="article-with-toc"
+    >
+      <div class="main-article">
+        <PostDate post={post} />
+        <PostTags post={post} />
+        <PostTitle post={post} enableLink={false} />
+        <MainTableOfContents headings={headings} />
+        <PostBody blocks={blocks} />
+        <PostTags post={post} />
+      </div>
 
-      <footer>
-        <PostRelativeLink prevPost={prevPost} nextPost={nextPost} />
-      </footer>
+      <div
+        class="side-toc"
+      >
+        <SideTableOfContents headings={headings} />
+      </div>
     </div>
-  </div>
-
-  <div slot="aside" class="aside">
-    <BlogPostsLink
-      heading="Posts in the same category"
-      posts={postsHavingSameTag.filter(
-        (p: interfaces.Post) => p.Slug !== post.Slug
-      )}
-    />
-    <BlogPostsLink heading="Recommended" posts={rankedPosts} />
-    <BlogPostsLink heading="Latest posts" posts={recentPosts} />
-    <BlogTagsLink heading="Categories" tags={tags} />
+    <BlogSections posts={postsHavingSameTag} />
   </div>
 </Layout>
+
+<style>
+.article-with-toc {
+  display: flex;
+  flex-direction: row;
+  width: 90vw;
+  margin-inline: auto;
+}
+
+.main-article {
+  width: 100%;
+}
+
+.side-toc {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .article-with-toc {
+    width: 80vw;
+  }
+}
+
+@media (min-width: 1024px) {
+  .article-with-toc {
+    width: 70vw;
+  }
+}
+
+@media (min-width: 1280px) {
+  .article-with-toc {
+    width: 85vw;
+    margin-left: 15vw;
+  }
+
+  .main-article {
+    width: var(--article-max-width);
+  }
+
+  .side-toc {
+    display: flex;
+    position: sticky;
+    top: 148px;
+    flex-direction: column;
+    align-self: flex-start;
+    align-items: center;
+    width: calc(85vw - var(--article-max-width));
+  }
+}
+</style>
+
+<script>
+document.addEventListener("scroll", function() {
+  const wrapper = document.querySelector(".article-with-toc") as Element;
+
+  // contents lenght should be same as tocLinks length
+  const contents = document
+    .querySelectorAll("a.adjust-sticky-header-toggle, a.adjust-sticky-header");
+  const tocLinks = document.querySelectorAll("a.toc-link");
+
+  const contentPositions: any[] = [];
+  contents.forEach((content, i) => {
+    const startPosition =
+      content.getBoundingClientRect().top;
+    const endPosition = contents.item(i + 1)
+      ? contents.item(i + 1).getBoundingClientRect().top
+      : wrapper.scrollHeight;
+    contentPositions.push({ startPosition, endPosition });
+  });
+
+  tocLinks.forEach((tocLink, i) => {
+    const { startPosition, endPosition } = contentPositions[i];
+    if (
+      startPosition <= 0 &&
+      endPosition > 0
+    ) {
+      tocLink.classList.add('active');
+    } else {
+      tocLink.classList.remove('active');
+    }
+  });
+});
+</script>
