--- a/src/components/Header/NavbarContent.astro
+++ b/src/components/Header/NavbarContent.astro
@@ -2,7 +2,7 @@
 ---
 <div class="flex flex-col gap-y-4 gap-x-0 mt-5 sm:flex-row sm:items-center sm:justify-end sm:gap-y-0 sm:gap-x-7 sm:mt-0 sm:ps-7">
   <a
-    class="font-medium text-blue-600 px-6 sm:py-6 sm:px-0 dark:text-blue-500"
+    class="font-medium text-emerald-600 px-6 sm:py-6 sm:px-0 dark:text-emerald-500"
     href="#"
     aria-current="page">
     Landing
