--- a/src/components/notion-blocks/Heading1.astro
+++ b/src/components/notion-blocks/Heading1.astro
@@ -34,7 +34,7 @@ const id = buildHeadingId(block.Heading1);
     </details>
   ) : (
     <a href={`#${id}`} id={id} class="adjust-sticky-header">
-      <h3>
+      <h3 class="border-l-4 border-s-black pl-[1em]">
         {block.Heading1.RichTexts.map((richText: interfaces.RichText) => (
           <RichText richText={richText} />
         ))}
