--- a/src/components/notion-blocks/Mention.astro
+++ b/src/components/notion-blocks/Mention.astro
@@ -1,7 +1,7 @@
 ---
-import { Post } from '../../lib/interfaces.ts';
+import type { Post } from '../../lib/interfaces';
 import { getPostByPageId } from '../../lib/notion/client';
-import { getPostLink } from '../../lib/blog-helpers.ts';
+import { getPostLink } from '../../lib/blog-helpers';
 import '../../styles/notion-color.css';
 import arrow from '../../images/icon-arrow-link.svg';
 
