--- a/src/components/notion-blocks/annotations/Color.astro
+++ b/src/components/notion-blocks/annotations/Color.astro
@@ -1,6 +1,6 @@
 ---
-import { RichText } from '../../../lib/interfaces.ts';
-import { snakeToKebab } from '../../../lib/style-helpers.ts';
+import type { RichText } from '../../../lib/interfaces';
+import { snakeToKebab } from '../../../lib/style-helpers';
 import '../../../styles/notion-color.css';
 
 export interface Props {
