--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import { NUMBER_OF_POSTS_PER_PAGE } from '../server-constants.ts';
+import { NUMBER_OF_POSTS_PER_PAGE } from '../server-constants';
 import {
   getPosts,
   getNumberOfPages,
-} from '../lib/notion/client.ts';
+} from '../lib/notion/client';
 import Layout from '../layouts/Layout.astro';
 import Pagination from '../components/Pagination.astro';
 import BlogSections from '../components/BlogSections/BlogSections.astro';
