--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,5 +1,5 @@
 ---
-import { getPageLink } from '../lib/blog-helpers.ts';
+import { getPageLink } from '../lib/blog-helpers';
 
 export interface Props {
   currentPage: number
@@ -16,7 +16,7 @@ const startPage = currentPage - 2 < 1 ? 1 : currentPage - 2;
 const endPage = currentPage + 2 > numberOfPages ? numberOfPages : currentPage + 2;
 
 const pages = [];
-for (let i = startPage; i <= endPage; i++) {
+for (let i = startPage; i <= endPage; i += 1) {
   pages.push(i);
 }
 ---
