--- a/src/components/PostRelativeLink.astro
+++ b/src/components/PostRelativeLink.astro
@@ -1,6 +1,6 @@
 ---
-import { Post } from '../lib/interfaces.ts';
-import { getNavLink, getPostLink } from '../lib/blog-helpers.ts';
+import type { Post } from '../lib/interfaces';
+import { getNavLink, getPostLink } from '../lib/blog-helpers';
 import PostTags from './PostTags.astro';
 
 export interface Props {
