--- a/src/components/ReadMoreLink.astro
+++ b/src/components/ReadMoreLink.astro
@@ -1,6 +1,6 @@
 ---
-import { Post } from '../lib/interfaces.ts';
-import { getPostLink } from '../lib/blog-helpers.ts';
+import type { Post } from '../lib/interfaces';
+import { getPostLink } from '../lib/blog-helpers';
 
 export interface Props {
   post: Post
