--- a/src/components/notion-blocks/BulletedListItems.astro
+++ b/src/components/notion-blocks/BulletedListItems.astro
@@ -1,13 +1,13 @@
 ---
-import * as interfaces from '../../lib/interfaces.ts';
-import { snakeToKebab } from '../../lib/style-helpers.ts';
-import RichText from './RichText.astro';
+import type { Block, RichText } from '../../lib/interfaces';
+import { snakeToKebab } from '../../lib/style-helpers';
+import RichTextComponent from './RichText.astro';
 import NotionBlocks from '../NotionBlocks.astro';
 import '../../styles/notion-color.css';
 
 export interface Props {
-  block: interfaces.Block
-  headings: interfaces.Block[]
+  block: Block
+  headings: Block[]
 }
 
 const { block, headings } = Astro.props;
@@ -16,11 +16,11 @@ const { block, headings } = Astro.props;
 <ul>
   {
     block.ListItems.filter(
-      (b: interfaces.Block) => b.Type === 'bulleted_list_item',
-    ).map((b: interfaces.Block) => (
+      (b: Block) => b.Type === 'bulleted_list_item',
+    ).map((b: Block) => (
       <li class={snakeToKebab(b.BulletedListItem.Color)}>
-        {b.BulletedListItem.RichTexts.map((richText: interfaces.RichText) => (
-          <RichText richText={richText} />
+        {b.BulletedListItem.RichTexts.map((richText: RichText) => (
+          <RichTextComponent richText={richText} />
         ))}
         {b.HasChildren && (
           <NotionBlocks
@@ -36,5 +36,6 @@ const { block, headings } = Astro.props;
 <style>
   ul {
     font-size: 1rem;
+    list-style-type: disc;
   }
 </style>
