--- a/src/components/notion-blocks/ColumnList.astro
+++ b/src/components/notion-blocks/ColumnList.astro
@@ -1,5 +1,5 @@
 ---
-import * as interfaces from '../../lib/interfaces.ts';
+import * as interfaces from '../../lib/interfaces';
 import NotionBlocks from '../NotionBlocks.astro';
 
 export interface Props {
