--- a/src/components/notion-blocks/Equation.astro
+++ b/src/components/notion-blocks/Equation.astro
@@ -1,6 +1,6 @@
 ---
 import katex from 'katex';
-import * as interfaces from '../../lib/interfaces.ts';
+import * as interfaces from '../../lib/interfaces';
 
 export interface Props {
   block: interfaces.Block
