--- a/src/components/notion-blocks/Image.astro
+++ b/src/components/notion-blocks/Image.astro
@@ -1,5 +1,5 @@
 ---
-import { ENABLE_LIGHTBOX } from '../../server-constants.ts';
+import { ENABLE_LIGHTBOX } from '../../server-constants';
 import * as interfaces from '../../lib/interfaces';
 import { filePath } from '../../lib/blog-helpers';
 import Caption from './Caption.astro';
