--- a/src/components/notion-blocks/Table.astro
+++ b/src/components/notion-blocks/Table.astro
@@ -1,5 +1,5 @@
 ---
-import * as interfaces from '../../lib/interfaces.ts';
+import * as interfaces from '../../lib/interfaces';
 import RichText from './RichText.astro';
 
 export interface Props {
