--- a/src/components/notion-blocks/Toggle.astro
+++ b/src/components/notion-blocks/Toggle.astro
@@ -1,6 +1,6 @@
 ---
-import * as interfaces from '../../lib/interfaces.ts';
-import { snakeToKebab } from '../../lib/style-helpers.ts';
+import * as interfaces from '../../lib/interfaces';
+import { snakeToKebab } from '../../lib/style-helpers';
 import RichText from './RichText.astro';
 import NotionBlocks from '../NotionBlocks.astro';
 import '../../styles/notion-color.css';
