--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -31,11 +31,19 @@ export async function getStaticPaths() {
 const { slug } = Astro.params;
 
 const post = await getPostBySlug(slug);
+
 if (!post) {
   throw new Error(`Post not found. slug: ${slug}`);
 }
 
-const [blocks, allPosts, rankedPosts, recentPosts, allTags, postsHavingSameTag] = await Promise.all([
+const [
+  blocks,
+  allPosts,
+  rankedPosts,
+  recentPosts,
+  allTags,
+  postsHavingSameTag,
+] = await Promise.all([
   getAllBlocksByBlockId(post.PageId),
   getAllPosts(),
   getRankedPosts(),
