--- a/src/components/BlogSections/BlogSections.astro
+++ b/src/components/BlogSections/BlogSections.astro
@@ -11,7 +11,7 @@ const { posts } = Astro.props;
 <div class="md:w-[80vw] lg:w-[70vw]
   px-4 md:px-0
   py-10
-  mx-auto"
+  md:mx-auto"
 >
   <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
     {posts.map((post) => (
