--- a/src/pages/posts/page/[page].astro
+++ b/src/pages/posts/page/[page].astro
@@ -27,15 +27,15 @@ const [posts, numberOfPages] = await Promise.all([
 ---
 
 <Layout title={`Posts ${page}/${numberOfPages}`} description='' path={`/posts/page/${page}`} ogImage=''>
-  <div slot="main">
-    {<ArticleCover />}
-    {<BlogSections posts={posts} />}
+  <div slot="main" class="md:w-[80vw] lg:w-[70vw] flex flex-col mx-auto size-full">
+    <ArticleCover />
+    <BlogSections posts={posts} />
 
-    {<Pagination
+    <Pagination
       currentPage={parseInt(page, 10)}
       numberOfPages={numberOfPages}
       tag=''
-    />}
+    />
   </div>
 </Layout>
 
