--- a/src/pages/posts/tag/[tag].astro
+++ b/src/pages/posts/tag/[tag].astro
@@ -8,17 +8,10 @@ import {
   getNumberOfPagesByTag,
 } from '../../../lib/notion/client';
 import Layout from '../../../layouts/Layout.astro';
-import NoContents from '../../../components/NoContents.astro';
-import PostDate from '../../../components/PostDate.astro';
-import PostTags from '../../../components/PostTags.astro';
-import PostTitle from '../../../components/Article/Cover/PostTitle.astro';
-import PostFeaturedImage from '../../../components/PostFeaturedImage.astro';
-import PostExcerpt from '../../../components/PostExcerpt.astro';
-import ReadMoreLink from '../../../components/ReadMoreLink.astro';
+import TagCover from '../../../components/Cover/TagCover.astro';
+import BlogSections from '../../../components/BlogSections/BlogSections.astro';
 import Pagination from '../../../components/Pagination.astro';
-import BlogPostsLink from '../../../components/BlogPostsLink.astro';
-import BlogTagsLink from '../../../components/BlogTagsLink.astro';
-import styles from '../../../styles/blog.module.css';
+
 import '../../../styles/notion-color.css';
 
 export async function getStaticPaths() {
@@ -38,57 +31,20 @@ const [posts, rankedPosts, tags, numberOfPages] = await Promise.all([
 const currentTag = posts[0].Tags.find((t) => t.name === tag);
 ---
 
-<Layout title={`Posts in ${tag}`} description='' path={`/posts/tag/${tag}`} ogImage='' >
-  <div slot="main" class={styles.main}>
-    <header>
-      <div class="tag-container">
-        <span class={`tag ${currentTag.color}`}>{tag}</span>
-      </div>
-    </header>
+<Layout
+  title={`Posts in ${tag}`}
+  description=''
+  path={`/posts/tag/${tag}`}
+  ogImage=''
+>
+  <div slot="main" class="md:w-[80vw] lg:w-[70vw] flex flex-col mx-auto size-full">
+    <TagCover tag={currentTag} />
+    <BlogSections posts={posts} />
 
-    {
-      posts.length === 0 ? (
-        <NoContents contents={posts} />
-      ) : (
-        posts.map((post) => (
-          <div class={styles.post} key={post.Slug}>
-            <PostDate post={post} />
-            <PostTags post={post} />
-            <PostTitle post={post} />
-            <PostFeaturedImage post={post} />
-            <PostExcerpt post={post} />
-            <ReadMoreLink post={post} />
-          </div>
-        ))
-      )
-    }
-
-    <footer>
-      <Pagination tag={tag} currentPage={1} numberOfPages={numberOfPages} />
-    </footer>
-  </div>
-
-  <div slot="aside" class={styles.aside}>
-    <BlogPostsLink heading="Recommended" posts={rankedPosts} />
-    <BlogTagsLink heading="Categories" tags={tags} />
+    <Pagination
+      currentPage={1}
+      numberOfPages={numberOfPages}
+      tag={tag}
+    />
   </div>
 </Layout>
-
-<style>
-  .tag-container {
-    margin: 0;
-    line-height: 1.3;
-    font-size: 1.2rem;
-    font-weight: normal;
-  }
-  @media (max-width: 640px) {
-    .tag-container {
-      font-size: 1.15rem;
-    }
-  }
-  .tag-container span.tag {
-    border-radius: 4px;
-    padding: 3px 9px;
-    background: var(--tag-bg-light-gray);
-  }
-</style>
