--- a/src/components/Header/Header1st.astro
+++ b/src/components/Header/Header1st.astro
@@ -3,19 +3,24 @@ import NavbarContent from './NavbarContent.astro';
 import SearchButton from '../SearchButton.astro';
 import GithubIcon from '../icon/GithubIcon.astro';
 import XIcon from '../icon/XIcon.astro';
+
+export interface Props {
+  categories: string[];
+}
+
+const { categories = ['Development', 'Diary'] } = Astro.props;
 ---
 
 <!-- ========== HEADER ========== -->
 <header class="flex flex-wrap sm:justify-start sm:flex-nowrap z-50 w-full bg-white border-b border-gray-200 text-sm py-3 sm:py-0 dark:bg-gray-800 dark:border-gray-700 sticky top-0 absolute">
   <nav class="relative max-w-[85rem] flex flex-wrap basis-full items-center w-full mx-auto px-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8" aria-label="Global">
     <div class="flex items-center justify-between">
-      <a class="flex-none text-xl font-semibold dark:text-white" href="#" aria-label="Brand">Zhong Blog</a>
+      <a class="flex-none text-xl font-semibold dark:text-white" href="/" aria-label="Brand">忠's Blog</a>
     </div>
 
     <div class="flex items-center ms-auto sm:ms-0 sm:order-3">
       <div class="ps-3 sm:ps-6 sm:ms-6 sm:border-s sm:border-gray-300 dark:border-gray-700 sm:hidden">
         <button
-          type="button"
           class="size-9 flex justify-center items-center text-sm font-semibold rounded-lg border border-gray-200 text-gray-800 hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
           data-hs-overlay="#navbar-secondary-content"
           aria-controls="navbar-secondary-content"
@@ -33,7 +38,7 @@ import XIcon from '../icon/XIcon.astro';
       tabindex="-1"
       data-hs-overlay-close-on-resize
     >
-      {<NavbarContent />}
+      <NavbarContent categories={categories}/>
     </div>
   </nav>
 </header>
@@ -46,17 +51,17 @@ import XIcon from '../icon/XIcon.astro';
   tabindex="-1"
 >
   <div class="flex justify-between gap-x-7 items-center py-3 px-4 border-b dark:border-gray-700">
-    {<SearchButton />}
+    <SearchButton />
     <button type="button" class="inline-flex flex-shrink-0 justify-center items-center size-8 rounded-lg text-gray-500 hover:text-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-offset-2 focus:ring-offset-white text-sm dark:text-gray-500 dark:hover:text-gray-400 dark:focus:ring-gray-700 dark:focus:ring-offset-gray-800" data-hs-overlay="#navbar-secondary-content">
       <span class="sr-only">Close offcanvas</span>
       <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
     </button>
 
   </div>
-  {<NavbarContent />}
+  <NavbarContent categories={categories}/>
   <div class="flex gap-x-7 justify-between items-center py-3 mx-[7rem]">
-    {<GithubIcon />}
-    {<XIcon />}
+    <GithubIcon />
+    <XIcon />
   </div>
 </div>
 <!-- End Offcanvas -->
