decide and modify the contents of header, main and footer

--- a/src/components/Cover/HomeCover.astro
+++ b/src/components/Cover/HomeCover.astro
@@ -17,7 +17,7 @@ import SpeechBubble from './SpeechBubble.astro';
   >
     <img
       class="rounded-full border border-gray-100 shadow-lg object-cover w-full h-full"
-      src="src/images/my_icon.svg"
+      src="/src/images/my_icon.svg"
     />
     <div class="absolute top-0 right-0 h-4 w-4 my-1 border-2 border-white rounded-full bg-green-400 z-2">
     </div>
