--- a/src/components/SearchModal.astro
+++ b/src/components/SearchModal.astro
@@ -4,7 +4,7 @@
 <div class="search-modal-container">
   <div class="overlay"></div>
 
-  <div class="search-modal">
+  <div class="search-modal overflow-auto">
     <div class="search-prompt">
       <input id="search-input" type="text" placeholder="Search..." />
     </div>
