--- a/src/components/notion-blocks/Table.astro
+++ b/src/components/notion-blocks/Table.astro
@@ -45,6 +45,8 @@ const { block } = Astro.props;
 
 <style>
   .table {
+    display: block;
+    overflow: auto;
   }
   .table table {
     margin: 0.6rem 0;
