--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@ const siteOGImage = new URL(
     />
   </head>
 
-  <body class="overflow-auto">
+  <body>
     <GoogleAnalytics trackingId={PUBLIC_GA_TRACKING_ID} />
     <Header categories={categories}/>
 
