--- a/src/components/BlogSections/BlogSection.astro
+++ b/src/components/BlogSections/BlogSection.astro
@@ -22,14 +22,18 @@ const { post } = Astro.props;
       src={post.FeaturedImage ? post.FeaturedImage.Url : '/src/images/no-image.png'}
       alt="Image Description"
       >
-    <span class="absolute top-0 end-0 rounded-se-xl rounded-es-xl text-xs font-medium bg-gray-800 text-white py-1.5 px-3 dark:bg-gray-900">
-      有料記事
-    </span>
+    {
+      post.badge && (
+        <span class="absolute top-0 start-0 rounded-sw-xl rounded-nw-xl text-xs font-medium bg-gray-800 text-white py-1.5 px-3 dark:bg-gray-900">
+          { post.badge }
+        </span>
+      )
+    }
   </div>
 
   <div class="mt-1 border-b-zinc-950">
     {<Date date={post.Date} />}
-    <h3 class="text-xl font-semibold text-gray-800 group-hover:text-blue-500 dark:text-gray-200">
+    <h3 class="text-xl font-semibold text-gray-800 group-hover:text-emerald-500 dark:text-gray-200">
       { post.Title }
     </h3>
     <p class="text-gray-800 dark:text-gray-200">
