--- a/src/components/Cover/TagCover.astro
+++ b/src/components/Cover/TagCover.astro
@@ -1,32 +1,17 @@
 ---
-import SpeechBubble from './SpeechBubble.astro';
+export interface Props {
+  category: string;
+}
+
+const { category = '' } = Astro.props;
 ---
 <div
-  class="bg-[url('/src/images/cover.jpg')] bg-no-repeat block w-full bg-fill h-[30vh] sm:h-[calc(180px+10vh)] bg-cover relative"
+  class="block w-full text-center py-10"
 >
-  <!-- 背景画像を白くする -->
-  <div
-    class="absolute size-full overflow-hidden bg-fixed"
-    style="background-color: rgba(255, 255, 255, 0.4)"
-  >
-  </div>
-
-  <!-- アイコン -->
-  <div
-    class="relative w-[4rem] h-[4rem] left-3 top-3 sm:w-20 sm:h-20"
-  >
-    <img
-      class="rounded-full border border-gray-100 shadow-lg object-cover w-full h-full"
-      src="/src/images/my_icon.svg"
-    />
-    <div class="absolute top-0 right-0 h-4 w-4 my-1 border-2 border-white rounded-full bg-green-400 z-2">
-    </div>
-  </div>
-
-  <!-- 吹き出し -->
-  <div
-    class="absolute top-0 left-0 right-0 bottom-0 w-[70%] h-1/2 ml-20 mt-16 sm:ml-[7rem]"
-  >
-    {<SpeechBubble />}
-  </div>
+  <h1 class="md:mx-auto text-4xl sm:text-6xl font-bold text-gray-800 dark:text-gray-200 block">
+    CATEGORY
+  </h1>
+  <span class="md:mx-auto text-2xl sm:text-4xl pt-3 sm:pt-5 font-bold text-gray-600 dark:text-gray-200 underline underline-offset-8 block">
+    { category }
+  </span>
 </div>
