--- a/src/components/SearchModal.astro
+++ b/src/components/SearchModal.astro
@@ -44,6 +44,8 @@
     width: 60%;
     border-radius: 6px;
     background-color: var(--bg);
+    overflow: scroll;
+    height: 80vh;
   }
   @media (max-width: 640px) {
     div.search-modal {
