create about page

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -10,7 +10,7 @@ import FooterContent from './FooterContent.astro';
     <div class="grid grid-cols-3 gap-6">
       <FooterContent content="忠's Blog" href='/' />
       <FooterContent content="HOME" href='/' />
-      <FooterContent content="PROFILE" href='/' />
+      <FooterContent content="ABOUT" href='/about' />
     </div>
     <!-- End Grid -->
 
