--- a/src/components/Header/NavbarContent.astro
+++ b/src/components/Header/NavbarContent.astro
@@ -16,6 +16,6 @@ const categoryAnchors: NavbarAnchor[] = categories.map((category) => ({
 ---
 <div class="flex flex-col gap-y-4 gap-x-0 mt-5 sm:flex-row sm:items-center sm:justify-end sm:gap-y-0 sm:gap-x-7 sm:mt-0 sm:ps-7">
   <NavbarContentAnchor href="/" content="HOME" />
-  <NavbarContentAnchor href="/" content="PROFILE" />
+  <NavbarContentAnchor href="/about" content="ABOUT" />
   <NavbarContentDropdown title="CATEGORIES" anchorContents={categoryAnchors}/>
 </div>
