add 404 page and modify speech bubble css

--- a/src/components/Cover/NotFoundSpeechBubble.astro
+++ b/src/components/Cover/NotFoundSpeechBubble.astro
@@ -2,24 +2,26 @@
 import '@fontsource/ma-shan-zheng';
 import '@fontsource/shippori-mincho-b1';
 ---
-<div class="balloon rounded text-center w-full">
+<div class="balloon rounded w-full">
   <div
     class="text-sm sm:text-base md:text-lg lg:text-xl"
     style="font-family: 'Shippori Mincho B1', serif; font-weight: bold;"
   >
-    ようこそ、忠's ホームページへ！
+    このページはすでに削除されているか、URLが間違っている可能性があります。
   </div>
+  <br>
   <div
     class="sm:text-lg md:text-xl lg:text-2xl"
     style="font-family: 'Ma Shan Zheng', cursive;"
   >
-    欢迎来到忠's 网站！
+    该页面已被删除或网址可能有误。
   </div>
+  <br>
   <div
     class="text-xs sm:text-sm sm:text-base md:text-lg lg:text-xl"
     style="font-weight: bold;"
   >
-    Welcome to Zhong's Website!
+    This page has already been deleted, or the URL may be incorrect.
   </div>
 </div>
 
@@ -28,9 +30,9 @@ import '@fontsource/shippori-mincho-b1';
 .balloon{
   position: relative;
   padding: 15px;
-  background-color: white;
+  background-color: whitesmoke;
   display: inline-block;     /* 横幅を自動で変更 */
-  box-shadow: 6px 6px 0px 0px green;  /* 影をつける */
+  box-shadow: 6px 6px 0px 0px grey;  /* 影をつける */
   z-index: 2;
 }
 
@@ -44,7 +46,7 @@ import '@fontsource/shippori-mincho-b1';
   width: 0;
   height: 0;
   border-right: 15px solid transparent;
-  border-bottom: 15px solid white;
+  border-bottom: 15px solid whitesmoke;
   border-left: 15px solid transparent;
   transform: rotate(60deg);
   z-index: 3;
