--- a/src/components/Cover/NotFoundCover.astro
+++ b/src/components/Cover/NotFoundCover.astro
@@ -1,16 +1,9 @@
 ---
-import SpeechBubble from './SpeechBubble.astro';
+import SpeechBubble from './NotFoundSpeechBubble.astro';
 ---
 <div
-  class="home-cover bg-[url('/src/images/cover.jpg')] bg-no-repeat block w-full bg-fill bg-cover relative"
+  class="not-found-cover block w-full relative"
 >
-  <!-- 背景画像を白くする -->
-  <div
-    class="absolute size-full overflow-hidden bg-fixed"
-    style="background-color: rgba(255, 255, 255, 0.4)"
-  >
-  </div>
-
   <!-- アイコン -->
   <div
     class="relative w-[4rem] h-[4rem] left-3 top-3 sm:w-20 sm:h-20"
@@ -32,7 +25,7 @@ import SpeechBubble from './SpeechBubble.astro';
 </div>
 
 <style>
-  .home-cover {
-    height: calc(max(200px, 30vh));
+  .not-found-cover {
+    height: calc(max(340px, 40vh));
   }
 </style>
