--- a/src/components/notion-blocks/Embed.astro
+++ b/src/components/notion-blocks/Embed.astro
@@ -6,6 +6,7 @@ import {
   isInstagramURL,
   isPinterestURL,
   isCodePenURL,
+  isGoogleMapURL,
 } from '../../lib/blog-helpers';
 import Bookmark from './Bookmark.astro';
 import TweetEmbed from './TweetEmbed.astro';
@@ -13,6 +14,7 @@ import TikTokEmbed from './TikTokEmbed.astro';
 import InstagramEmbed from './InstagramEmbed.astro';
 import PinterestEmbed from './PinterestEmbed.astro';
 import CodePenEmbed from './CodePenEmbed.astro';
+import GoogleMapEmbed from './GoogleMapEmbed.astro';
 
 export interface Props {
   block: interfaces.Block
@@ -21,9 +23,11 @@ export interface Props {
 
 const { block, urlMap } = Astro.props;
 
-let url: URL;
+let url: URL | null = null;
 try {
-  url = new URL(block.Embed.Url);
+  if (block.Embed) {
+    url = new URL(block.Embed.Url);
+  }
 } catch (err) {
   console.log(err);
 }
@@ -41,6 +45,8 @@ try {
       <PinterestEmbed url={url} />
     ) : isCodePenURL(url) ? (
       <CodePenEmbed url={url} />
+    ) : isGoogleMapURL(url) ? (
+      <GoogleMapEmbed url={url} />
     ) : (
       <Bookmark block={block} urlMap={urlMap} />
     )
