--- a/src/components/Article/Cover/Cover.astro
+++ b/src/components/Article/Cover/Cover.astro
@@ -29,7 +29,8 @@ const {
     <img
       class="size-full object-cover"
       src={coverImage}
-      alt="Image Description"
+      loading="lazy"
+      alt="Article Cover Image"
       >
   </div>
 </div>
